# Machina

./: .dockerignore  .env.example  .gitignore  Dockerfile  Dockerfile.dashboard  README.md  docker-compose.yml  main.py  pyproject.toml  registry.yaml  requirements-dev.txt  requirements.txt  setup.cfg
app/: __init__.py
app/api/: README.md  __init__.py  composition_root.py  main.py  main_di_enhanced_fixed.py  shutdown.py
app/core/: __init__.py  config.py  core.py  core_di.py
app/core/adapters/: base_adapter.py  claude_adapter.py  gemini_adapter.py  openai_adapter.py  openrouter_adapter.py  universal_adapter.py
app/core/config/: __init__.py  schema.py
app/core/di/: __init__.py  container.py  interfaces.py
app/core/di/interfaces/: __init__.py
app/core/monitoring/: event_store.py  status_monitor.py
app/core/orchestration/: __init__.py  agent_orchestrator.py  agent_orchestrator_di.py  agent_state.py  circuit_breaker.py  conversation_state.py  data_models.py  workflow_engine.py
app/core/plugins/: README.md  __init__.py  base_plugin.py  claude_plugin.py  cli_plugin.py  gemini_plugin.py  ollama_plugin.py  openai_plugin.py  openrouter_plugin.py
app/core/repositories/: __init__.py  agent_state_repository.py  memory_state_repository.py  redis_agent_state_repository.py
app/core/routing/: router.py  router_di.py  router_di_fixed.py
app/core/services/: __init__.py  adapter_factory.py  adapter_factory_fixed.py  circuit_breaker_factory.py  configuration.py  configuration_fixed.py  event_store.py  http_client.py  logger.py  redis_provider.py  telemetry.py
app/core/tools/: __init__.py  registry.py  web_tools.py
app/core/utils/: http_client.py  logger.py  task_manager.py
app/dashboard/: dashboard.py
docs/: ARCHITECTURE.md  DI_DEVELOPER_GUIDE.md  DI_VISUAL_GUIDE.md  changelog.rst  conf.py  configuration.rst  contributing.rst  index.rst  installation.rst  license.rst  quickstart.rst  workflows.rst
docs/api/: core.rst  orchestration.rst  plugins.rst  routing.rst
docs/development/: adapters.rst  extending.rst  plugins.rst
workflows/: creative_workflow.yaml
